--- a/app/views/pages/about.html.erb
+++ b/app/views/pages/about.html.erb
@@ -1,1 +1,6 @@
 <h1>This is About Page</h1>
+
+<p>On this page you can add, edit and delete articles</p>
+
+<%= link_to 'Articles listing', articles_path %>
+<%= link_to 'Home page', root_path %>
