--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,1 +1,4 @@
-<h1>sup</h1>
+<h1>Welcome to my home page</h1>
+
+<%= link_to 'Articles listing', articles_path %>
+<%= link_to 'About page', about_path %>
