clean up layout

--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,5 +1,14 @@
-<h1>Welcome to my home page</h1>
 
-
-<%= link_to 'About page', about_path %>
-<%= link_to 'Articles listing', articles_path %>
+<div id="page-content">
+  <div class="container" id="home-container">
+    <div class="jumbotron text-center text-white" >
+      <h1 class="display-8" >AlphaBlog</h1>
+      <p class="lead">This is my sample page. Here you can add new articles and edit existing ones.</p>
+      <p>Built in rails, based on Bootstrap</p>
+      <hr class="my-4 mt-10 pt-5">
+      <p class="lead">
+        <a class="btn btn-dark btn-lg" href="#" role="button">Sign up!</a>
+      </p>
+    </div>
+  </div>
+</div>
