--- a/app/views/articles/edit.html.erb
+++ b/app/views/articles/edit.html.erb
@@ -1,5 +1,3 @@
-<h1>Edit an article</h1>
 
-<%= render 'form' %>
-
-<%= link_to 'Cancel and return to articles listing', articles_path %>
+  <h1 class="text-center mt-4">Editing articles</h1>
+  <%= render 'form' %>
