--- a/app/views/articles/show.html.erb
+++ b/app/views/articles/show.html.erb
@@ -7,12 +7,15 @@
     <div class="col-8 mt-4">
         <div class="card text-center shadow mb-5 bg-white rounded">
           <div class="card-header font-italic">
-            by Robert G.
+            by <%= @article.user.username if @article.user %>
+            <%= link_to gravatar_for(@article.user), user_path(@article.user) %>
           </div>
           <div class="card-body">
             <div class="card-text text-left"><%= simple_format@article.description %></div>
+            <% if logged_in? && (@article.user == current_user || current_user.admin?) %>
             <%= link_to "Edit", edit_article_path(@article), class: "btn btn-outline-info" %>
             <%= link_to "Delete", article_path(@article), class: "btn btn-outline-danger", data: { turbo_method: :delete, turbo_confirm: "Are you sure?" } %>
+            <% end %>
           </div>
           <div class="card-footer text-muted">
             <small>Created <%= time_ago_in_words (@article.created_at) %> ago,
@@ -23,9 +26,3 @@
     </div>
     </div>
   </div>
-
-
-
-   <p>
-    <%= link_to 'Create new article', new_article_path %>
-  </p>
