--- a/app/views/layouts/_navigation.html.erb
+++ b/app/views/layouts/_navigation.html.erb
@@ -8,22 +8,48 @@
 <div class="collapse navbar-collapse" id="navbarSupportedContent">
   <ul class="navbar-nav me-auto mb-2 mb-lg-0">
     <li class="nav-item">
-      <a class="nav-link" href="#">Link</a>
+      <%= link_to "Bloggers", users_path, class: "nav-link" %>
     </li>
     <li class="nav-item dropdown">
       <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
         Articles
       </a>
       <ul class="dropdown-menu">
+        <% if logged_in? %>
         <%= link_to "Create new article", new_article_path, class: "dropdown-item" %>
+        <% end %>
         <%= link_to "View articles", articles_path, class: "dropdown-item" %>
         <li><hr class="dropdown-divider"></li>
         <li><a class="dropdown-item" href="#">Something else here</a></li>
       </ul>
     </li>
+
+    <% if logged_in? %>
     <li class="nav-item">
-      <a class="nav-link disabled">Disabled</a>
+      <%= button_to 'Logout', logout_path, method: :delete, class: "nav-link" %>
     </li>
+
+    <li class="nav-item dropdown">
+      <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+        <%= "(Admin)" if current_user.admin? %> Profile [<%= current_user.username %>]
+      </a>
+      <ul class="dropdown-menu">
+        <%= link_to "View your profile", user_path(current_user), class: "dropdown-item" %>
+        <%= link_to "Edit your profile", edit_user_path(current_user), class: "dropdown-item" %>
+        <%= link_to "Delete profile", user_path(current_user), class: "dropdown-item text-danger", data: { turbo_method: :delete, turbo_confirm: "Are you sure?"} %>
+      </ul>
+
+    <% else %>
+
+    <li class="nav-item">
+      <%= link_to 'Log in', login_path, class: "nav-link" %>
+    </li>
+
+    <li class="nav-item">
+      <%= link_to 'Signup', signup_path, class: "nav-link" %>
+    </li>
+
+    <% end %>
   </ul>
   <form class="d-flex" role="search">
     <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
