--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -7,7 +7,7 @@
       <p>Built in rails, based on Bootstrap</p>
       <hr class="my-4 mt-10 pt-5">
       <p class="lead">
-        <a class="btn btn-dark btn-lg" href="#" role="button">Sign up!</a>
+        <%= link_to "Sign up!", signup_path, class: "btn btn-dark btn-lg" %>
       </p>
     </div>
   </div>
