--- a/app/views/articles/_article.html.erb
+++ b/app/views/articles/_article.html.erb
@@ -10,6 +10,11 @@
             <% else %>
             by unknown
            <% end %>
+
+           <% if article.categories.any? %>
+            <div class="mt-2"> <%= render article.categories %> </div>
+           <% end %>
+
         </div>
         <div class="card-body">
           <h5 class="card-title"><%= link_to article.title, article_path(article), class: "text-info"%></h5>
