--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -3,11 +3,13 @@
   <head>
     <title>AplhaBlog</title>
     <meta name="viewport" content="width=device-width,initial-scale=1">
+    <meta name="turbo-cache-control" content="no-cache">
     <%= csrf_meta_tags %>
     <%= csp_meta_tag %>
     <%= javascript_include_tag "turbo", type: "module" %>
     <%= stylesheet_link_tag 'application', 'bootstrap.min', media: 'all' %>
     <%= stylesheet_link_tag 'custom' %>
+
 
     <%= javascript_importmap_tags %>
     <%= javascript_pack_tag "application" %>
@@ -19,7 +21,7 @@
     <%= render 'layouts/messages'%>
     <%= render 'layouts/footer'%>
 
-  
+
 
 
 
