--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -4,7 +4,7 @@
     <div class="jumbotron text-center text-white" >
       <h1 class="display-8" >AlphaBlog</h1>
       <p class="lead">This is my sample page. Here you can add new articles and edit existing ones.</p>
-      <p>Built in rails, based on Bootstrap</p>
+      <p>Built in rails.</p>
       <hr class="my-4 mt-10 pt-5">
       <p class="lead">
         <%= link_to "Sign up!", signup_path, class: "btn btn-dark btn-lg" %>
