--- a/app/views/layouts/_footer.html.erb
+++ b/app/views/layouts/_footer.html.erb
@@ -2,6 +2,6 @@
 
   <footer id="sticky-footer" class="mt-3 flex-shrink-0 py-4 bg-dark text-white fixed-bottom">
     <div class="container text-center">
-      <small>Copyright &copy; <%= link_to "Gradowski Top Striker All Rights Reserved", "https://www.linkedin.com/in/robert-gradowski-09b028a7/", class: "text-white" %></small>
+      <small>Copyright &copy; <%= link_to "Interested? Check me out!", "https://www.linkedin.com/in/robert-gradowski-09b028a7/", class: "text-white" %></small>
     </div>
   </footer>
