--- a/app/views/pages/about.html.erb
+++ b/app/views/pages/about.html.erb
@@ -1,6 +1,5 @@
 <h1>This is About Page</h1>
 
-<p>On this page you can add, edit and delete articles</p>
-
-<%= link_to 'Articles listing', articles_path %>
-<%= link_to 'Home page', root_path %>
+<p>Hello!</p>
+<p>I see you found my about page that is not linked anywhere on this site.</p>
+<p>Good for You!</p>
